; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_26753.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_26753.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c" _=\EF\BF\BDBios Bumper\EF\BF\BD=_ \0A\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [60 x i8] c" (endrazine (at) pulltheplug (dot) org [email concealed]) \0A\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c" by Endrazine\0A\00", align 1
@.str.3 = private unnamed_addr constant [33 x i8] c"\0A==============================\0A\00", align 1
@.str.4 = private unnamed_addr constant [32 x i8] c"[Keyboard buffer manipulation]\0A\00", align 1
@.str.5 = private unnamed_addr constant [32 x i8] c"==============================\0A\00", align 1
@.str.6 = private unnamed_addr constant [24 x i8] c"\0A 1 - Display Password\0A\00", align 1
@.str.7 = private unnamed_addr constant [28 x i8] c" 2 - Clear Keyboard Buffer\0A\00", align 1
@.str.8 = private unnamed_addr constant [25 x i8] c" 3 - Enter new Password\0A\00", align 1
@.str.9 = private unnamed_addr constant [12 x i8] c"\0A x - Quit\0A\00", align 1
@.str.10 = private unnamed_addr constant [5 x i8] c"%c%c\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8, align 1
  %3 = alloca i8, align 1
  %4 = alloca [100 x i8], align 16
  store i32 0, i32* %1, align 4
  store i8 0, i8* %2, align 1
  %5 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @printf(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.1, i64 0, i64 0))
  %7 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  br label %8

8:                                                ; preds = %39, %0
  %9 = load i8, i8* %2, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp ne i32 %10, 120
  br i1 %11, label %12, label %40

12:                                               ; preds = %8
  %13 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0))
  %14 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.4, i64 0, i64 0))
  %15 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.5, i64 0, i64 0))
  %16 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.6, i64 0, i64 0))
  %17 = call i32 @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.7, i64 0, i64 0))
  %18 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.8, i64 0, i64 0))
  %19 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0))
  %20 = call i32 @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.9, i64 0, i64 0))
  %21 = call i32 @scanf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.10, i64 0, i64 0), i8* %2, i8* %3)
  %22 = load i8, i8* %2, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp eq i32 %23, 49
  br i1 %24, label %25, label %27

25:                                               ; preds = %12
  %26 = call i32 (...) @dump_bios_pwd()
  br label %27

27:                                               ; preds = %25, %12
  %28 = load i8, i8* %2, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp eq i32 %29, 50
  br i1 %30, label %31, label %33

31:                                               ; preds = %27
  %32 = call i32 (...) @clear_bios_pwd()
  br label %33

33:                                               ; preds = %31, %27
  %34 = load i8, i8* %2, align 1
  %35 = sext i8 %34 to i32
  %36 = icmp eq i32 %35, 51
  br i1 %36, label %37, label %39

37:                                               ; preds = %33
  %38 = call i32 (...) @change_pwd()
  br label %39

39:                                               ; preds = %37, %33
  br label %8

40:                                               ; preds = %8
  ret i32 0
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @scanf(i8*, i8*, i8*) #1

declare dso_local i32 @dump_bios_pwd(...) #1

declare dso_local i32 @clear_bios_pwd(...) #1

declare dso_local i32 @change_pwd(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
